fix(auth): Skip choice for linked Telegram users
